public/style/style.css
/* ... */
body > #youtube #description {
    width: calc(100% - 31px);
    float: left;
    text-align: center;
    /*font-family: Aperture;*/
    line-height: 25px;
    padding-left: 5px;
    font-size: 14px;
    box-sizing: content-box;
}
body > #youtube #ytplayer {
}

#editProfile {
    margin: 20px 0px 0px 22px;
    font-family: Segoe UI;
}
#editProfile .normalcontent {
    font-size: 12px;
    width: 960px;
    padding-bottom: 10px;
}
html[class="dark"] #editProfile .msg {
    color: #ffffff;
}
#donate a {
    font-size: 10px;
    font-weight: bold;
    color: #7c7c7c;
}
.highlight {
    color: #0066cc;;
}
#profile {
    width: 1277px;
    min-height: 300px;
    margin: 30px auto;
    padding: 10px;
    /*overflow: auto;*/
    /*font-family: Segoe UI, Helvetica, sans-serif;*/
    box-sizing: content-box;
}
#profile .userinformation {
    width: 100%;
    color: #FFF;
    height: 280px;
    position: relative;
    font-weight: bold;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
    text-align: center;
}
#profile .userinformation .profilebg {
    background: #c6d7e1;
    height: 100%;
    overflow: hidden;
    position: relative;
}

#profile .userinformation .profilebg.hasavatar img {
    width: 100%;
    position: relative;
    top: -500px;
}
#profile .userinformation .general {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    margin: 0 auto;
}
#profile .userinformation .general-wrapper {
    position: relative;
    top: 49%;
    margin-top: 1px;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
html[class="dark"] #profile .userinformation .general-wrapper .profileBannerButton {
    background: #202225;
    color: #fff;
}
html[class="dark"] #profile .userinformation .general-wrapper .profileBannerButton:hover {
    background: #3096d1;
}
html[class="dark"] #profile .userinformation .general-wrapper .banToggleButton:hover {
    background: red;
}
#profile .userinformation .general .general-wrapper img {
    width: 150px;
    height: 150px;
    -webkit-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.6);
    -moz-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.6);
    box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.6);
    margin-top: 15px;
}
#profile .userinformation .general .general-wrapper .nickname {
    font-size: 26px;
    line-height: 26px;
    /*text-transform: uppercase;*/
    margin-top: 8px;
    font-family: Aperture;
    letter-spacing: 1px;
    /*text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);*/
}
#profile .userinformation .general .general-wrapper .profile-desc {
    font-size: 12px;
    /*margin-bottom: 12px;*/
}
#profile .global-stats {
    /*float: left;*/
    /*width: calc(100% - 15px);*/
    margin-bottom: 10px;
    /*padding-left: 15px;*/
    height: 130px;
    margin-top: 3px;
}
#profile .global-stats .block {
    float: left;
    /*width: 240px;*/
    width: 100%;
}
#profile .global-stats .block-container {
    width: 14%;
    float: left;
    padding-left: 10px;
    padding-top: 5px;
}
#profile .global-stats .block-container.wr {
    width: 13%;
}
#profile .global-stats .block-container.oldnew {
    width: 19%;
}
#profile .global-stats .block-container.oldnew .number {
    font-size: 25px;
    vertical-align: top;
}
#profile .global-stats .block-container.average {
    width: 16%;
}
#profile .global-stats .block-container.bestworst {
    width: 16%;
}
#profile .global-stats .block-container.ranks {
    width: 15%;
}
#profile .global-stats .block-container.bestworst .title{
    width: 116px;
}
#profile .global-stats .block-container.oldnew .title{
    max-width: 140px;
}
#profile .global-stats .block-container.points {
    width: 16%;
}
#profile .global-stats .block-container.mid {
    margin: 0 15px;
}
#profile .global-stats .block:not(:first-child) .block-inner {
    text-align: left;
    margin-top: 3px;
    /*margin-left: 15px;*/
}
#profile .global-stats .block .number {
    font-size: 26px;
    text-align: right;
    position: relative;
    top: -6px;
    float: left;
    max-width: 73px;
    /*vertical-align: top;*/
    /*line-height: 34px;*/
}
#profile .global-stats .block-inner[title] {
    cursor: help;
}
#profile .global-stats .block .number span {
    margin-right: 5px;
}
#profile .global-stats .block .number .no {
    margin-right: 8px;
}
#profile .global-stats .block .title {
    /*max-width: 125px;*/
    font-size: 14px;
    display: inline-block;
    text-align: left;
    position: relative;
    top: -2px;
    margin-left: 10px;
    text-transform: uppercase;
    line-height: 16px;
}
#profile .chapterwrs-wrapper {
    height: 250px;
}
#profile .activity, #profile .chapter-wrs {
    /*float: left;*/
    width: 100%;
}
#profile .chapter-wrs {
    margin-left: 15px;
    width: 473px;
}
#profile .noactivity {
    float: left;
    width: 100%;
    height: 85px;
    text-align: center;
    font-size: 17px;
}
#profile .noactivity span {
    display: block;
}
#profile .noactivity span.manualsearch, #profile .noactivity span.manualsearch a {
    font-size: 12px;
}
#profile .noactivity .noact-wrap {
    padding-top: 30px;
}
#profile .global-stats .upperth {
    position: relative;
    top: -0.7em;
    font-size: 50%;
}
#profile .profile-title span {
    padding-left: 12px;
    padding-right: 20px;
}
#profile .profile-title {
    height: 35px;
    line-height: 35px;
    font-size: 11px;
    border-bottom: 2px solid #2f96d1;
    margin-top: 10px;
    /*float: left;*/
    width: 100%;
}
#profile .column-3 .column .profile-title {
    width: 100%;
}
#profile .column-3 .column {
    /*float: left;*/
    display: inline-block;
    vertical-align: top;
}
#profile .column-3 .column.sp {
    width: 420px;
}
#profile .column-3 .column.mid {
    margin: 0 10px;
}
#profile .column-3 .column.coop {
    width: 420px;
}
#profile .column-3 .block-content {
    /*padding: 20px;*/
    /*float: left;*/
    padding: 20px 12px 0px 0px;
    /*width: calc(100% - 40px);*/
}
/* ... */

